--- a/test/cucumber/build.xml
+++ b/test/cucumber/build.xml
@@ -34,6 +34,12 @@
         <mkdir dir="${test.cucumber.classes.dir}" />
         <path id="processorpath.ref">
             <pathelement location="${dir.build.lib}/error_prone_core-with-dependencies.jar"/>
+            <pathelement location="${dir.build.lib}/error_prone_annotation.jar"/>
+            <pathelement location="${dir.build.lib}/error_prone_annotations.jar"/>
+            <pathelement location="${dir.build.lib}/error_prone_type_annotations.jar"/>
+            <pathelement location="${dir.build.lib}/error_prone_check_api.jar"/>
+            <pathelement location="${dir.build.lib}/java-diff-utils.jar"/>
+            <pathelement location="${dir.build.lib}/dataflow-errorprone.jar"/>
             <pathelement location="${dir.build.lib}/failureaccess.jar"/>
             <pathelement location="${dir.build.lib}/jFormatString.jar"/>
             <pathelement location="${dir.build.lib}/threeten-extra.jar"/>
@@ -56,7 +62,7 @@
                     <include name="echothree-client.jar"/>
                 </fileset>
             </classpath>
-            <compilerarg line="-XDcompilePolicy=simple"/>
+            <compilerarg value="-XDcompilePolicy=simple"/>
             <compilerarg value="-processorpath"/>
             <compilerarg pathref="processorpath.ref"/>
             <!-- Begin Error Prone -->
