--- a/ivy.xml
+++ b/ivy.xml
@@ -8,6 +8,7 @@
     </configurations>
     <dependencies>
         <dependency org="ch.qos.reload4j" name="reload4j" rev="1.2.25" conf="sources->sources" />
+        <dependency org="com.fasterxml.uuid" name="java-uuid-generator" rev="5.1.0" conf="sources->sources" />
         <dependency org="com.google.code.gson" name="gson" rev="2.10.1" conf="sources->sources" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.27.1" conf="sources->sources" />
         <dependency org="com.google.guava" name="failureaccess" rev="1.0.1" conf="sources->sources" />
@@ -95,6 +96,7 @@
         <dependency org="xml-apis" name="xml-apis" rev="1.4.01" conf="sources->sources" />
 
         <dependency org="ch.qos.reload4j" name="reload4j" rev="1.2.25" conf="javadoc->javadoc" />
+        <dependency org="com.fasterxml.uuid" name="java-uuid-generator" rev="5.1.0" conf="javadoc->javadoc" />
         <dependency org="com.google.code.gson" name="gson" rev="2.10.1" conf="javadoc->javadoc" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.27.1" conf="javadoc->javadoc" />
         <dependency org="com.google.guava" name="failureaccess" rev="1.0.1" conf="javadoc->javadoc" />
@@ -181,6 +183,7 @@
         <dependency org="xml-apis" name="xml-apis" rev="1.4.01" conf="javadoc->javadoc" />
 
         <dependency org="ch.qos.reload4j" name="reload4j" rev="1.2.25" conf="binaries->default" />
+        <dependency org="com.fasterxml.uuid" name="java-uuid-generator" rev="5.1.0" conf="binaries->default" />
         <dependency org="com.google.code.gson" name="gson" rev="2.10.1" conf="binaries->default" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.27.1" conf="binaries->default">
             <artifact name="error_prone_core" e:classifier="with-dependencies" ext="jar"/>
