--- a/ivy.xml
+++ b/ivy.xml
@@ -41,6 +41,7 @@
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.165" conf="sources->sources" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="21.2" conf="sources->sources" />
         <dependency org="io.r2dbc" name="r2dbc-spi" rev="1.0.0.RELEASE" conf="sources->sources" />
+        <dependency org="jakarta.xml.bind" name="jakarta.xml.bind-api" rev="3.0.1" conf="sources->sources" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="sources->sources" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="sources->sources" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="sources->sources" />
@@ -49,7 +50,6 @@
         <dependency org="javax.servlet" name="jstl" rev="1.2" conf="sources->sources" />
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="sources->sources" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="sources->sources" />
-        <dependency org="javax.xml.bind" name="jaxb-api" rev="2.3.1" conf="sources->sources" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="sources->sources" />
         <dependency org="junit" name="junit" rev="4.12" conf="sources->sources" />
         <dependency org="com.mysql" name="mysql-connector-j" rev="8.4.0" conf="sources->sources" />
@@ -87,8 +87,8 @@
         <dependency org="org.javassist" name="javassist" rev="3.29.0-GA" conf="sources->sources" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.3" conf="sources->sources" />
         <dependency org="org.jooq" name="jooq" rev="3.19.10" conf="sources->sources" />
-        <dependency org="org.jooq" name="jooq-codegen" rev="3.19.0" conf="sources->sources" />
-        <dependency org="org.jooq" name="jooq-meta" rev="3.19.0" conf="sources->sources" />
+        <dependency org="org.jooq" name="jooq-codegen" rev="3.19.10" conf="sources->sources" />
+        <dependency org="org.jooq" name="jooq-meta" rev="3.19.10" conf="sources->sources" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="sources->sources" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.36" conf="sources->sources" />
         <dependency org="org.slf4j" name="slf4j-reload4j" rev="1.7.36" conf="sources->sources" />
@@ -132,6 +132,7 @@
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.165" conf="javadoc->javadoc" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="21.2" conf="javadoc->javadoc" />
         <dependency org="io.r2dbc" name="r2dbc-spi" rev="1.0.0.RELEASE" conf="javadoc->javadoc" />
+        <dependency org="jakarta.xml.bind" name="jakarta.xml.bind-api" rev="3.0.1" conf="javadoc->javadoc" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="javadoc->javadoc" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="javadoc->javadoc" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="javadoc->javadoc" />
@@ -139,7 +140,6 @@
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="javadoc->javadoc" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="javadoc->javadoc" />
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="javadoc->javadoc" />
-        <dependency org="javax.xml.bind" name="jaxb-api" rev="2.3.1" conf="javadoc->javadoc" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="javadoc->javadoc" />
         <dependency org="junit" name="junit" rev="4.12" conf="javadoc->javadoc" />
         <dependency org="com.mysql" name="mysql-connector-j" rev="8.4.0" conf="javadoc->javadoc" />
@@ -177,8 +177,8 @@
         <dependency org="org.javassist" name="javassist" rev="3.29.0-GA" conf="javadoc->javadoc" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.3" conf="javadoc->javadoc" />
         <dependency org="org.jooq" name="jooq" rev="3.19.10" conf="javadoc->javadoc" />
-        <dependency org="org.jooq" name="jooq-codegen" rev="3.19.0" conf="javadoc->javadoc" />
-        <dependency org="org.jooq" name="jooq-meta" rev="3.19.0" conf="javadoc->javadoc" />
+        <dependency org="org.jooq" name="jooq-codegen" rev="3.19.10" conf="javadoc->javadoc" />
+        <dependency org="org.jooq" name="jooq-meta" rev="3.19.10" conf="javadoc->javadoc" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="javadoc->javadoc" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.36" conf="javadoc->javadoc" />
         <dependency org="org.slf4j" name="slf4j-reload4j" rev="1.7.36" conf="javadoc->javadoc" />
@@ -224,6 +224,7 @@
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.165" conf="binaries->default" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="21.2" conf="binaries->default" />
         <dependency org="io.r2dbc" name="r2dbc-spi" rev="1.0.0.RELEASE" conf="binaries->default" />
+        <dependency org="jakarta.xml.bind" name="jakarta.xml.bind-api" rev="3.0.1" conf="binaries->default" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="binaries->default" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="binaries->default" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="binaries->default" />
@@ -232,7 +233,6 @@
         <dependency org="javax.servlet" name="jstl" rev="1.2" conf="binaries->default" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="binaries->default" />
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="binaries->default" />
-        <dependency org="javax.xml.bind" name="jaxb-api" rev="2.3.1" conf="binaries->default" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="binaries->default" />
         <dependency org="junit" name="junit" rev="4.12" conf="binaries->default" />
         <dependency org="com.mysql" name="mysql-connector-j" rev="8.4.0" conf="binaries->default" />
@@ -276,8 +276,8 @@
         <dependency org="org.javassist" name="javassist" rev="3.29.0-GA" conf="binaries->default" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.3" conf="binaries->default" />
         <dependency org="org.jooq" name="jooq" rev="3.19.10" conf="binaries->default" />
-        <dependency org="org.jooq" name="jooq-codegen" rev="3.19.0" conf="binaries->default" />
-        <dependency org="org.jooq" name="jooq-meta" rev="3.19.0" conf="binaries->default" />
+        <dependency org="org.jooq" name="jooq-codegen" rev="3.19.10" conf="binaries->default" />
+        <dependency org="org.jooq" name="jooq-meta" rev="3.19.10" conf="binaries->default" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="binaries->default" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.36" conf="binaries->default" />
         <dependency org="org.slf4j" name="slf4j-reload4j" rev="1.7.36" conf="binaries->default" />
