--- a/build.properties
+++ b/build.properties
@@ -28,7 +28,7 @@ javadoc.use=true
 javadoc.windowtitle=Echo Three APIs
 javadoc.doctitle=Echo Three Component
 javadoc.copyright=Copyright 2002-2024 Echo Three, LLC
-javadoc.trackingId=UA-144274299-1
+javadoc.trackingId=G-4TRJ105HG7
 
 #####################
 # Pattern Sets      #
