--- a/src/build.xml
+++ b/src/build.xml
@@ -220,11 +220,12 @@
             classpath="${compile.task.classpath}"
             classpathref="shared.class.path"
             includes="${compile.task.include}" >
-            <compilerarg value="-XDcompilePolicy=simple"/>
             <compilerarg value="-processorpath"/>
             <compilerarg pathref="processorpath.ref"/>
             <!-- Begin Error Prone -->
             <!-- fork="true" is also required for Error Prone -->
+            <compilerarg value="-XDcompilePolicy=simple"/>
+            <compilerarg value="--should-stop=ifError=FLOW" />
             <compilerarg value="-Xplugin:ErrorProne -Xep:DeadException:ERROR" />
             <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"/>
             <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"/>
