--- a/ui/cli/database/build.xml
+++ b/ui/cli/database/build.xml
@@ -83,11 +83,12 @@
                     <include name="**/*.jar"/>
                 </fileset>
             </classpath>
-            <compilerarg value="-XDcompilePolicy=simple"/>
             <compilerarg value="-processorpath"/>
             <compilerarg pathref="processorpath.ref"/>
             <!-- Begin Error Prone -->
             <!-- fork="true" is also required for Error Prone -->
+            <compilerarg value="-XDcompilePolicy=simple"/>
+            <compilerarg value="--should-stop=ifError=FLOW" />
             <compilerarg value="-Xplugin:ErrorProne -Xep:DeadException:ERROR" />
             <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"/>
             <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"/>
