#1494: Updated listing and review of Transactions

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1566,6 +1566,7 @@ columnTitle.offset=Offset
 columnTitle.oldestQueuedEntityTime=Oldest Queued Entity Time
 columnTitle.option=Option
 columnTitle.originalCredit=Original Credit
+columnTitle.originalCurrency=Original Currency
 columnTitle.originalDebit=Original Debit
 columnTitle.pageAreaDescription=Page Area Description
 columnTitle.pages=Pages
@@ -1589,7 +1590,6 @@ columnTitle.percentageToPass=Percentage To Pass
 columnTitle.pluralDescription=Plural Description
 columnTitle.port=Port
 columnTitle.postedTime=Posted Time
-columnTitle.postingTime=Posting Time
 columnTitle.potentialCreditLimit=Potential Credit Limit
 columnTitle.preferredContactListContactMechanismPurpose=Preferred Contact Mechanism Purpose
 columnTitle.preferredSize=Preferred Size
@@ -1667,6 +1667,7 @@ columnTitle.textColor=Text Color
 columnTitle.textDecoration=Text Decoration
 columnTitle.textTransformation=Text Transformation
 columnTitle.thruTime=Thru Time
+columnTitle.time=Time
 columnTitle.timeZone=Time Zone
 columnTitle.toQuantity=To Quantity
 columnTitle.toType=To Type
@@ -1676,6 +1677,8 @@ columnTitle.trainingClass=Training Class
 columnTitle.trainingClassAnswerName=Training Class Answer Name
 columnTitle.trainingClassPage=Training Class Page
 columnTitle.trainingClassQuestionName=Training Class Question Name
+columnTitle.transactionTime=Transaction Time
+columnTitle.transactionTimeType=Transaction Time Type
 columnTitle.transactionType=Transaction Type
 columnTitle.transactions=Transactions
 columnTitle.translation=Translation
